--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -3,7 +3,7 @@
     <mat-drawer #drawer class="sidenav" mode="side">
         <img src="img/side-image.svg" alt="Imagem de navegação">
         <mat-nav-list class="nav-list">
-        <a mat-list-item routerLink="/">
+        <a mat-list-item routerLink="home">
             <i class="material-icons" style="color: white;">home</i>
             <div class="nav-text">Home</div>
         </a>
@@ -30,6 +30,7 @@
       <button class="menu mat-elevation-z8" (click)="drawer.toggle()" mat-icon-button>
         <mat-icon>menu</mat-icon>
       </button>
+      <router-outlet></router-outlet>
     </div>
   
   </mat-drawer-container>
