--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<mat-card class="card" appearance="outlined">
+<mat-card class="card mat-elevation-z8" appearance="outlined">
     <mat-card-header>
       <mat-card-title>Help Desk</mat-card-title>
       <mat-card-subtitle>Kauan Paulino Farias</mat-card-subtitle>
