--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -7,7 +7,7 @@
             <i class="material-icons" style="color: white;">home</i>
             <div class="nav-text">Home</div>
         </a>
-        <a mat-list-item routerLink="/">
+        <a mat-list-item routerLink="tecnicos">
             <i class="material-icons">account_circle</i>
             <div class="nav-text">Técnicos</div>
         </a>
