--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,13 +4,20 @@
     <img src="img/login-image.svg" alt="">
     <mat-form-field class="full-width" appearance='fill'>
       <mat-label>E-mail</mat-label>
-      <input matInput placeholder="Ex. fulano@gmail.com">
+      <input [formControl]="email" name="email"
+      [(ngModel)]="creds.email"  
+      required
+      matInput placeholder="Ex. fulano@gmail.com">
     </mat-form-field>
   
     <mat-form-field class="full-width" appearance='fill'>
         <mat-label>Senha</mat-label>
-        <input type="password" matInput placeholder="Ex. 123">
+        <input [formControl]="senha" name="senha"
+        [(ngModel)]="creds.senha" 
+        required
+        type="password" 
+        matInput placeholder="Ex. 123">
       </mat-form-field>
-      <button class="full-width mat-elevation-z4" mat-stroked-button>Entrar</button>
+      <button type="button" (click)="logar()" [disabled]="!validaCampos()"  class="full-width mat-elevation-z4" mat-stroked-button>Entrar</button>
   </form>
 </div>
