--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -19,7 +19,7 @@
             <i class="material-icons">code</i>
             <div class="nav-text">Github</div>
         </a>
-        <a mat-list-item routerLink="/">
+        <a mat-list-item (click)="logout()">
             <i class="material-icons">logout</i>
             <div class="nav-text">Logout </div>
         </a>
