--- a/src/app/components/tecnico/tecnico-list/tecnico-list.component.css
+++ b/src/app/components/tecnico/tecnico-list/tecnico-list.component.css
@@ -6,3 +6,17 @@
 table {
    width: 100%;
 }
+mat-form-field{
+   width: 100%;
+}
+button{
+   width: 100%;
+   margin-bottom: 10px;
+}
+
+h1{
+   width: 100%;
+   text-align: center;
+   margin-bottom: 5px;
+   font-size: 30px;
+}
