--- a/src/app/components/tecnico/tecnico-create/tecnico-create.component.html
+++ b/src/app/components/tecnico/tecnico-create/tecnico-create.component.html
@@ -4,14 +4,15 @@
         <img class="fullWidth" src="/img/tecnico-create.svg" alt="HelpDesk">
         
         <section class="section">
-            <mat-checkbox class="margin" >Admin</mat-checkbox>
-            <mat-checkbox class="margin" >Cliente</mat-checkbox>
-            <mat-checkbox class="margin" >Tecnico</mat-checkbox>
+            <mat-checkbox (click)="addPerfil(0)" class="margin" >Admin</mat-checkbox>
+            <mat-checkbox (click)="addPerfil(1)" class="margin" >Cliente</mat-checkbox>
+            <mat-checkbox (click)="addPerfil(2)" class="margin" >Tecnico</mat-checkbox>
         </section>
         
         <mat-form-field class="fullWidth" appearance="fill">
             <mat-label>Nome</mat-label>
             <input
+            [(ngModel)]="tecnico.nome"
             [formControl]="nome" name="nome"
             required 
             matInput 
@@ -25,6 +26,7 @@
             <mat-label>CPF</mat-label>
             <input 
             [formControl]="cpf" name="cpf"
+            [(ngModel)]="tecnico.cpf"
             required 
             matInput 
             placeholder="000.000.000-00"
@@ -36,6 +38,7 @@
         <mat-form-field class="fullWidth" appearance="fill">
             <mat-label>E-mail</mat-label>
             <input 
+            [(ngModel)]="tecnico.email"
             [formControl]="email" name="email"
             required 
             matInput 
@@ -47,6 +50,7 @@
         <mat-form-field class="fullWidth" appearance="fill">
             <mat-label>Senha</mat-label>
             <input
+             [(ngModel)]="tecnico.senha"
              [formControl]="senha" name="senha"
              required 
              type="password" 
@@ -55,7 +59,7 @@
             <mat-icon matSuffix>password</mat-icon>
         </mat-form-field>
           
-        <button [disabled]="!validaCampos()" class="fullWidth mat-elevation-z4" mat-flat-button>Cadastrar</button>
+        <button (click)="create()" [disabled]="!validaCampos()" class="fullWidth mat-elevation-z4" mat-flat-button>Cadastrar</button>
         <button routerLink="../" class="cancelar mat-elevation-z4" mat-stroked-button>Cancelar</button>
     </form>
 </div>
