--- a/src/app/components/tecnico/tecnico-update/tecnico-update.component.html
+++ b/src/app/components/tecnico/tecnico-update/tecnico-update.component.html
@@ -1,12 +1,12 @@
 <div class="container mat-elevation-z8">
     <form class="form">
-        <h1 class="fullWidth">Cadastrar Técnico</h1>
+        <h1 class="fullWidth">Atualizar Técnico</h1>
         <img class="fullWidth" src="/img/tecnico-create.svg" alt="HelpDesk">
         
         <section class="section">
             <mat-checkbox (click)="addPerfil(0)" class="margin" >Admin</mat-checkbox>
-            <mat-checkbox (click)="addPerfil(1)" class="margin" [checked]="true" >Cliente</mat-checkbox>
-            <mat-checkbox (click)="addPerfil(2)" class="margin" [checked]="true" >Tecnico</mat-checkbox>
+            <mat-checkbox (click)="addPerfil(1)" [checked]="true"  class="margin" >Cliente</mat-checkbox>
+            <mat-checkbox (click)="addPerfil(2)" [checked]="true" class="margin" >Tecnico</mat-checkbox>
         </section>
         
         <mat-form-field class="fullWidth" appearance="fill">
@@ -59,7 +59,7 @@
             <mat-icon matSuffix>password</mat-icon>
         </mat-form-field>
           
-        <button (click)="create()" [disabled]="!validaCampos()" class="fullWidth mat-elevation-z4" mat-flat-button>Cadastrar</button>
-        <button routerLink="../" class="cancelar mat-elevation-z4" mat-stroked-button>Cancelar</button>
+        <button (click)="update()" [disabled]="!validaCampos()" class="fullWidth mat-elevation-z4" mat-flat-button>Atualizar</button>
+        <button routerLink="../../" class="cancelar mat-elevation-z4" mat-stroked-button>Cancelar</button>
     </form>
 </div>
