Implementando Crud Completo Para Cliente

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -11,7 +11,7 @@
             <i class="material-icons">account_circle</i>
             <div class="nav-text">Técnicos</div>
         </a>
-        <a mat-list-item routerLink="/">
+        <a mat-list-item routerLink="clientes">
             <i class="material-icons">person</i>
             <div class="nav-text"> Clientes</div>
         </a> 
