Implementando Componente Chamado_list

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -14,7 +14,11 @@
         <a mat-list-item routerLink="clientes">
             <i class="material-icons">person</i>
             <div class="nav-text"> Clientes</div>
-        </a> 
+        </a>
+        <a mat-list-item routerLink="chamados">
+          <i class="material-icons">support</i>
+          <div class="nav-text"> Chamados</div>
+        </a>  
         <a mat-list-item routerLink="/">
             <i class="material-icons">code</i>
             <div class="nav-text">Github</div>
