--- a/src/app/components/chamado/chamado-list/chamado-list.component.html
+++ b/src/app/components/chamado/chamado-list/chamado-list.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <h1>Listando Chamados</h1>
   
-    <button class="mat-elevation-z4" mat-stroked-button color="primary">Novo Chamado</button>
+    <button routerLink="create" class="mat-elevation-z4" mat-stroked-button color="primary">Novo Chamado</button>
     <mat-form-field>
       <mat-label>Filter</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
