--- a/src/app/components/chamado/chamado-create/chamado-create.component.html
+++ b/src/app/components/chamado/chamado-create/chamado-create.component.html
@@ -5,7 +5,9 @@
     <form class="form">
         <mat-form-field class="full-width" appearance="outline">
           <mat-label>Título do chamado</mat-label>
-          <input  
+          <input
+          [(ngModel)]="chamado.titulo" 
+          name="titulo" 
           [formControl]="titulo"
           required
           matInput
@@ -16,8 +18,10 @@
         <mat-form-field appearance="outline">
            <mat-label>Selecione um status</mat-label>
            <mat-select
+           [(ngModel)]="chamado.status"
+           name="status"
            [formControl]="status"
-            required 
+           required 
            >
              <mat-option value="0">ABERTO</mat-option>
              <mat-option value="1">EM ANDAMENTO</mat-option>
@@ -28,8 +32,10 @@
          <mat-form-field appearance="outline">
            <mat-label>Selecione uma prioridade</mat-label>
            <mat-select
+           [(ngModel)]="chamado.prioridade"
+           name="prioridade"
            [formControl]="prioridade" 
-            required 
+           required 
            >
              <mat-option value="0">BAIXA</mat-option>
              <mat-option value="1">MÉDIA</mat-option>
@@ -42,10 +48,12 @@
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Selecione um técnico</mat-label>
             <mat-select
+            [(ngModel)]="chamado.tecnico"
+            name="tecnico"
             [formControl]="tecnico" 
             required 
             >
-              <mat-option value="0">Exemplo</mat-option>
+              <mat-option *ngFor="let tec of tecnicos" value="{{tec.id}}">{{tec.nome}}</mat-option>
             </mat-select>
           </mat-form-field>
       </div>
@@ -54,10 +62,12 @@
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Selecione um cliente</mat-label>
             <mat-select
+            [(ngModel)]="chamado.cliente"
+            name="cliente"
             [formControl]="cliente" 
             required 
             >
-              <mat-option value="0">Exemplo 1</mat-option>
+              <mat-option *ngFor="let cli of clientes" value="{{cli.id}}">{{cli.nome}}</mat-option>
             </mat-select>
           </mat-form-field>
       </div>
@@ -66,14 +76,16 @@
         <mat-form-field class="full-width" appearance="outline">
           <mat-label>Deixe uma observação</mat-label>
           <textarea class="descricao"
+          [(ngModel)]="chamado.observacoes"
+          name="observacoes"
           matInput
           [formControl]="observacoes"
-            required
+          required
           placeholder="Ex. trocar bateria de notebook queimada..."></textarea>
         </mat-form-field>
       </form>
 
-      <button [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Adicionar</button>
+      <button (click)="create()" [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Adicionar</button>
       <button  class="full-width mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
 
 </div>
