--- a/src/app/components/chamado/chamado-update/chamado-update.component.html
+++ b/src/app/components/chamado/chamado-update/chamado-update.component.html
@@ -1,5 +1,5 @@
 <div class="container mat-elevation-z8">
-    <h1 class="full-width">Criando Chamado</h1>
+    <h1 class="full-width">Atualizando Chamado</h1>
     <img class="full-width" src="img/chamado-create.svg" alt="HelpDesk">
 
     <form class="form">
@@ -16,7 +16,7 @@
     </form>
     <div class="status-prioridade">
         <mat-form-field appearance="outline">
-           <mat-label>Selecione um status</mat-label>
+           <mat-label>{{retornaStatus(chamado.status)}}</mat-label>
            <mat-select
            [(ngModel)]="chamado.status"
            name="status"
@@ -30,7 +30,7 @@
          </mat-form-field>
   
          <mat-form-field appearance="outline">
-           <mat-label>Selecione uma prioridade</mat-label>
+           <mat-label>{{retornaPrioridade(chamado.prioridade)}}</mat-label>
            <mat-select
            [(ngModel)]="chamado.prioridade"
            name="prioridade"
@@ -46,7 +46,7 @@
       
       <div class="tecnico">
         <mat-form-field class="full-width" appearance="outline">
-            <mat-label>Selecione um técnico</mat-label>
+            <mat-label>{{chamado.nomeTecnico}}</mat-label>
             <mat-select
             [(ngModel)]="chamado.tecnico"
             name="tecnico"
@@ -60,7 +60,7 @@
 
       <div class="cliente">
         <mat-form-field class="full-width" appearance="outline">
-            <mat-label>Selecione um cliente</mat-label>
+            <mat-label>{{chamado.nomeCliente}}</mat-label>
             <mat-select
             [(ngModel)]="chamado.cliente"
             name="cliente"
@@ -85,8 +85,8 @@
         </mat-form-field>
       </form>
 
-      <button (click)="create()" [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Adicionar</button>
-      <button routerLink="../"  class="full-width mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
+      <button (click)="update()" [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Atualizar</button>
+      <button routerLink="../../"  class="full-width mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
 
 </div>
 
