--- a/src/app/components/chamado/chamado-read/chamado-read.component.html
+++ b/src/app/components/chamado/chamado-read/chamado-read.component.html
@@ -1,15 +1,14 @@
 <div class="container mat-elevation-z8">
-    <h1 class="full-width">Atualizando Chamado</h1>
+    <h1 class="full-width">Visualizando Chamado</h1>
     <img class="full-width" src="img/chamado-create.svg" alt="HelpDesk">
 
     <form class="form">
         <mat-form-field class="full-width" appearance="outline">
           <mat-label>Título do chamado</mat-label>
           <input
+          [disabled]="true"
           [(ngModel)]="chamado.titulo" 
           name="titulo" 
-          [formControl]="titulo"
-          required
           matInput
           placeholder="Ex. Trocar bateria de notebook">
         </mat-form-field>
@@ -18,10 +17,9 @@
         <mat-form-field appearance="outline">
            <mat-label>Status ({{retornaStatus(chamado.status)}})</mat-label>
            <mat-select
+           [disabled]="true"
            [(ngModel)]="chamado.status"
            name="status"
-           [formControl]="status"
-           required 
            >
              <mat-option value="0">ABERTO</mat-option>
              <mat-option value="1">EM ANDAMENTO</mat-option>
@@ -32,10 +30,9 @@
          <mat-form-field appearance="outline">
            <mat-label>Prioridade ({{retornaPrioridade(chamado.prioridade)}})</mat-label>
            <mat-select
+           [disabled]="true"
            [(ngModel)]="chamado.prioridade"
            name="prioridade"
-           [formControl]="prioridade" 
-           required 
            >
              <mat-option value="0">BAIXA</mat-option>
              <mat-option value="1">MÉDIA</mat-option>
@@ -48,12 +45,11 @@
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Técnico ({{chamado.nomeTecnico}})</mat-label>
             <mat-select
+            [disabled]="true"
             [(ngModel)]="chamado.tecnico"
             name="tecnico"
-            [formControl]="tecnico" 
-            required 
             >
-              <mat-option *ngFor="let tec of tecnicos" value="{{tec.id}}">{{tec.nome}}</mat-option>
+              <mat-option >{{chamado.nomeTecnico}}</mat-option>
             </mat-select>
           </mat-form-field>
       </div>
@@ -62,12 +58,11 @@
         <mat-form-field class="full-width" appearance="outline">
             <mat-label>Cliente ({{chamado.nomeCliente}})</mat-label>
             <mat-select
+            [disabled]="true"
             [(ngModel)]="chamado.cliente"
             name="cliente"
-            [formControl]="cliente" 
-            required 
             >
-              <mat-option *ngFor="let cli of clientes" value="{{cli.id}}">{{cli.nome}}</mat-option>
+              <mat-option>{{chamado.nomeCliente}}</mat-option>
             </mat-select>
           </mat-form-field>
       </div>
@@ -76,17 +71,15 @@
         <mat-form-field class="full-width" appearance="outline">
           <mat-label>Deixe uma observação</mat-label>
           <textarea class="descricao"
+          [disabled]="true"
           [(ngModel)]="chamado.observacoes"
           name="observacoes"
           matInput
-          [formControl]="observacoes"
-          required
           placeholder="Ex. trocar bateria de notebook queimada..."></textarea>
         </mat-form-field>
       </form>
 
-      <button (click)="update()" [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-raised-button color="primary">Atualizar</button>
-      <button routerLink="../../"  class="full-width mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
+      <button routerLink="../../"  class="full-width mat-elevation-z4" mat-stroked-button color="warn">Retornar</button>
 
 </div>
 
