--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,21 +2,23 @@
     <form class="form mat-elevation-z4">
     <h1>Help Desk</h1>
     <img src="img/login-image.svg" alt="">
-    <mat-form-field class="full-width" appearance='fill'>
+    <mat-form-field class="full-width" appearance='outline'>
       <mat-label>E-mail</mat-label>
       <input [formControl]="email" name="email"
       [(ngModel)]="creds.email"  
       required
       matInput placeholder="Ex. fulano@gmail.com">
+      <mat-icon matSuffix>email</mat-icon>
     </mat-form-field>
   
-    <mat-form-field class="full-width" appearance='fill'>
+    <mat-form-field class="full-width" appearance='outline'>
         <mat-label>Senha</mat-label>
         <input [formControl]="senha" name="senha"
         [(ngModel)]="creds.senha" 
         required
         type="password" 
         matInput placeholder="Ex. 123">
+        <mat-icon matSuffix>password</mat-icon>
       </mat-form-field>
       <button type="button" (click)="logar()" [disabled]="!validaCampos()"  class="full-width mat-elevation-z4" mat-stroked-button>Entrar</button>
   </form>
