--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -19,7 +19,7 @@
           <i class="material-icons">support</i>
           <div class="nav-text"> Chamados</div>
         </a>  
-        <a mat-list-item routerLink="/">
+        <a mat-list-item href="https://github.com/kauank8/HelpDesk-Front" target="_blank">
             <i class="material-icons">code</i>
             <div class="nav-text">Github</div>
         </a>
